added shoppinglistitem to router, create view icon and an onclick function to view the items

--- a/src/Components/Shoppingitems.css
+++ b/src/Components/Shoppingitems.css
@@ -1,4 +1,4 @@
-.shoppinglists{
+/* .shoppinglists{
     width: 100%;
     min-height: 100vh;
   }
@@ -9,4 +9,4 @@
   .bttn {
     display: flex;
     justify-content: flex-end;
-  }
+  } */
